fix: hide block on mobile

--- a/src/components/shared/Header/index.module.scss
+++ b/src/components/shared/Header/index.module.scss
@@ -31,3 +31,10 @@
 	@include text1(400);
 	@include scaleHover;
 }
+
+.hide {
+	display: none;
+	@include respondAbove($breakpointBurger) {
+		display: block;
+	}
+}
