--- a/src/components/shared/MakeAnAppointmentDialog/index.module.scss
+++ b/src/components/shared/MakeAnAppointmentDialog/index.module.scss
@@ -23,3 +23,10 @@
 	cursor: pointer;
 	padding: rem(5) rem(15);
 }
+
+.hide {
+	display: none;
+	@include respondAbove($breakpointBurger) {
+		display: block;
+	}
+}
